# FDTD

./: .gitignore  1d_plotter.py  3dplot.py  README.md  main.cpp  movie.py
1d/: CMakeLists.txt  Doxyfile  a.out  main.cpp
1d/data/: 1d_plotter.py  1d_plotter_dielectric.py  field_plotter.py  movieMaker.py
1d/include/: FDTD_1D.h  fdtd_1d.h
1d/src/: 03_fdtd_graded_pml.cpp  04_fdtd_CMPL.cpp  05_fdtd_CMPL_frequency.cpp  FDTD_1D.cpp  fdtd_1d.cpp  field_plotter.py  main.cpp  script.sh
1d/test/: control_file.scf  field_plotter.py
1d_PML/: CMakeLists.txt
1d_PML/data/: field_plotter.py  sigma_z_e_graded.txt  sigma_z_e_pml.txt  sigma_z_h_graded.txt  sigma_z_h_pml.txt
1d_PML/include/: FDTD_1D.h
1d_PML/src/: FDTD_1D.cpp  main.cpp
1d_PML/test/: control_file.scf  script.sh
1d_joshua_baxter/: 01_fdtd_abc.cpp  02_fdtd_naive_pml.cpp  04_fdtd_CMPL.cpp  05_fdtd_CMPL_frequency.cpp  control_file.scf  fdtd_1d.cpp  field_plotter.py  script.sh  sigma_h.txt
2d/: 01_fdtd.cpp  02_fdtd_conductivity.cpp  03_fdtd_naive_PML.cpp  04_fdtd_graded_PML.cpp  05_fdtd_graded_CPML.cpp  06_fdtd_CPML_control_file.cpp  CMakeLists.txt  async_fdtd.cpp  control_file.scf  fdtd_2d.cpp  field_plotter.py  main.cpp  moviemaker.py  script.sh
2d/data/: clear_all.sh  compare.cpp  fieldPlotter.py  imagesc_plotter.py  kappa_x.txt  movieMaker.py  pml_a_x.txt  pml_b_x.txt  pml_c_y.txt  sigma.txt  sigma_plotter.py  state_plotter.py
2d/data/Ez/: Ez_0.txt  Ez_1.txt  Ez_10.txt  Ez_100.txt  Ez_101.txt  Ez_102.txt  Ez_103.txt  Ez_104.txt  Ez_105.txt  Ez_106.txt  Ez_107.txt  Ez_108.txt  Ez_109.txt  Ez_11.txt  Ez_110.txt  Ez_111.txt  Ez_112.txt  Ez_113.txt  Ez_114.txt  Ez_115.txt  Ez_116.txt  Ez_117.txt  Ez_118.txt  Ez_119.txt  Ez_12.txt  Ez_120.txt  Ez_121.txt  Ez_122.txt  Ez_123.txt  Ez_124.txt  Ez_125.txt  Ez_126.txt  Ez_127.txt  Ez_128.txt  Ez_129.txt  Ez_13.txt  Ez_130.txt  Ez_131.txt  Ez_132.txt  Ez_133.txt  (+960 more)
2d/include/: FDTD_2D.h
2d/src/: FDTD_2D.cpp  a.out  main.cpp
2d/test/TEz/: control_file.scf  script.sh
2d_class/: CMakeLists.txt
2d_class/include/: fdtd_2d.h  publish.h
2d_class/src/: fdtd_2d.cpp  main.cpp  publish.cpp
2d_class/test/: 02_custom_queue.cpp  control_file.json  moviemaker.py  script.sh
2d_class/test/data/: clear_all.sh
2d_class/test/data/Ez/: Ez0.txt  Ez100.txt  Ez120.txt  Ez140.txt  Ez160.txt  Ez180.txt  Ez20.txt  Ez200.txt  Ez220.txt  Ez240.txt  Ez260.txt  Ez280.txt  Ez300.txt  Ez320.txt  Ez340.txt  Ez360.txt  Ez380.txt  Ez40.txt  Ez400.txt  Ez420.txt  Ez440.txt  Ez60.txt  Ez80.txt
2d_quadtree/: CMakeLists.txt
2d_quadtree/include/: Mesh2D.h  fdtd_2d.h
2d_quadtree/src/: Mesh2D.cpp  fdtd_2d.cpp  main.cpp  publish.cpp
2d_quadtree_yee_grid/: CMakeLists.txt
data/: Hy_1D_0.txt  Hy_1D_1.txt  Hy_1D_10.txt  Hy_1D_100.txt  Hy_1D_101.txt  Hy_1D_102.txt  Hy_1D_103.txt  Hy_1D_104.txt  Hy_1D_105.txt  Hy_1D_106.txt  Hy_1D_107.txt  Hy_1D_108.txt  Hy_1D_109.txt  Hy_1D_11.txt  Hy_1D_110.txt  Hy_1D_111.txt  Hy_1D_112.txt  Hy_1D_113.txt  Hy_1D_114.txt  Hy_1D_115.txt  Hy_1D_116.txt  Hy_1D_117.txt  Hy_1D_118.txt  Hy_1D_119.txt  Hy_1D_12.txt  Hy_1D_120.txt  Hy_1D_121.txt  (+973 more)
(+1350 files in other folders)
